# architects-handbook

./: .gitignore  AI-Mastery-Roadmap.html  AI-Mastery-Roadmap.md  AWS-Learning-Guide.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OAuth2-SSO-Complete-Guide.html  OAuth2-SSO-Complete-Guide.md  PEGA_BPM_Complete_Learning_Guide.html  PEGA_BPM_Complete_Learning_Guide.md  README-cpp-mastery.md  README.md  Resume_Development_Lead.doc  Resume_Development_Lead.html  Resume_Development_Lead.md  cpp-mastery-guide.html  index.html  payment-gateway-guide.html  software-engineering-knowledge-base.html
.ai-assistant-index/5f59862b-b7ac-437b-88b2-38e13e5dab70/: index_metadata.pickle
.cognify/: .gitignore
.cognify/knowledge/patterns/: typescript-extension-pattern.md
ai-code-assistant/: .gitignore  README.md  config.yaml  pyproject.toml
ai-code-assistant/docs/: ARCHITECTURE.md  CHANGELOG_RETRIEVAL.md  FILE_EDITING_FEATURE.md  FILE_EDITING_GUIDE.html  KNOWLEDGE_BASE.md  RAG_DEEP_DIVE.html  REFACTOR_FEATURE.html  REFACTOR_FEATURE.md  RETRIEVAL_FEATURE.html  learning-guide.html
ai-code-assistant/src/ai_code_assistant/: __init__.py  cli.py  config.py  llm.py
ai-code-assistant/src/ai_code_assistant/analytics/: __init__.py  collector.py  storage.py
ai-code-assistant/src/ai_code_assistant/auth/: __init__.py  manager.py
ai-code-assistant/src/ai_code_assistant/chat/: __init__.py
ai-code-assistant/src/ai_code_assistant/knowledge/: __init__.py  manager.py
ai-code-assistant/src/ai_code_assistant/licensing/: __init__.py  features.py  manager.py
ai-code-assistant/src/ai_code_assistant/retrieval/: __init__.py  search.py
ai-code-assistant/src/ai_code_assistant/settings/: __init__.py  manager.py  privacy.py
ai-code-assistant/tests/: __init__.py  test_analyzer.py  test_code_gen.py  test_config.py  test_editor.py  test_file_handler.py  test_formatters.py  test_llm.py  test_refactor.py  test_retrieval.py
cognify-ai/: index.html
cognify-ai/vscode-extension/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
cognify-ai/vscode-extension/src/: chatPanel.ts  chatViewProvider.ts  cognifyRunner.ts  diagnostics.ts  extension.ts  statusBar.ts
